# is-semantic-release-configured

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: little_anyhow.rs  main.rs
