[package]
name = "is-semantic-release-configured"
version = "1.2.127"
edition = "2021"
authors = ["Eric Crosson <eric.s.crosson@utexas.edu>"]
license = "MIT OR Apache-2.0"
description = "Test if semantic-release is configured"
readme = "README.md"
repository = "https://github.com/EricCrosson/is-semantic-release-configured"
homepage = "https://github.com/EricCrosson/is-semantic-release-configured"
keywords = ["cli", "semantic-release"]
categories = ["command-line-utilities"]
exclude = [
  "/.envrc",
  "/.github",
  "/flake.{lock,nix}"
]

[dependencies]
clap = { version = "=4.5.47", features = ["cargo", "derive", "wrap_help"] }
find-semantic-release-config = "=1.0.8"
serde_json = "=1.0.143"

[profile.release]
lto = true
codegen-units = 1
strip = true
